--- a/contact.html
+++ b/contact.html
@@ -6,84 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="CSS/reset.css">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
   </head>
-
-  <body class="m-0 border-0 bd-example">
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
+  <body>
+    <nav class="navbar navbar-expand-md custom-nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">
-          <img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContact"
-          aria-controls="navContact" aria-expanded="false" aria-label="Toggle navigation">
+        <a href="./index.html"><img src="assets/images/logo.png" alt="POWER web" width="100" height="100"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContact"
+          aria-controls="navbarContact" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navContact">
+        <div class="collapse navbar-collapse" id="navbarContact">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="./index.html">home</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">projecten</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="./contact.html">contact</a></li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">zoeken</button>
-          </form>
         </div>
       </div>
     </nav>
 
-    <header class="m-5 text-center blauwgrijs">
+    <header class="header-box text-center" style="background-color:#E0E1E4; padding: 3rem 1rem;">
       <h1 class="display-3">CONTACT</h1>
     </header>
+
     <div class="container">
-      <div class="row g-3">
-        <main class="col-md-9 col-sm-12">
+      <div class="row g-4">
+        <main class="col-md-8 col-12 main-box">
           <section id="contact-form" class="row">
-            <div class="col-12 mb-3">
-              <a href="./index.html" class="text-decoration-none">
-                <i class="bi bi-arrow-left"></i> TERUG
-              </a>
-            </div>
-            <form action="#" method="POST" class="col-12 col-lg-10">
+            <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" class="col-12 col-lg-10 mt-3">
+              <input type="hidden" name="form-name" value="contact">
               <div class="mb-3">
-                <label for="naam" class="form-label">NAAM</label>
-                <input type="text" id="naam" name="naam" class="form-control" required>
+                <label for="name" class="form-label">NAAM</label>
+                <input type="text" id="name" name="name" class="form-control" required>
               </div>
               <div class="mb-3">
-                <label for="email" class="form-label">JE E-MAIL</label>
+                <label for="email" class="form-label">UW EMAIL</label>
                 <input type="email" id="email" name="email" class="form-control" required>
               </div>
               <div class="mb-3">
-                <label for="bericht" class="form-label">BERICHT</label>
-                <textarea id="bericht" name="bericht" class="form-control" rows="5" required></textarea>
+                <label for="subject" class="form-label">ONDERWERP</label>
+                <input type="text" id="subject" name="subject" class="form-control" required>
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">BERICHT</label>
+                <textarea id="message" name="message" class="form-control" rows="5" required></textarea>
+              </div>
+              <div class="mb-3">
+                <div data-netlify-recaptcha="true"></div>
               </div>
               <button type="submit" class="btn btn-primary">VERSTUREN</button>
             </form>
           </section>
         </main>
 
-        <aside class="col-md-3 p-5 border-start border-light-emphasis">
-          <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-          <p class="mb-1"><strong>E:</strong> jouw.mail@voorbeeld.com</p>
-          <p class="mb-3"><strong>T:</strong> +123 456 789</p>
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
+        <aside class="col-md-4 col-12 p-3 aside-box">
+          <h2 class="fs-6 fw-bold text-uppercase mb-3">Contact</h2>
+          <p><strong>Email:</strong> <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
+          <p><strong>Telefoon:</strong> <a href="tel:+32484843579">+32 484 84 35 79</a></p>
+          <p><strong>Locatie:</strong> Antwerpen, België</p>
+          <ul class="list-inline socials mb-0 mt-3">
+            <li class="list-inline-item">
+              <a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation"><i class="bi bi-github"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/"><i class="bi bi-linkedin"></i></a>
+            </li>
           </ul>
         </aside>
+
       </div>
     </div>
 
-    <footer class="footer m-0 bg-body-tertiary text-center">© portfolio</footer>
-
+    <footer class="footer text-center custom-footer mt-4">
+      &copy; <span id="year"></span> Wasim Van Dessel | 
+      <a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation">GitHub</a> | 
+      <a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/">LinkedIn</a>
+    </footer>
   </body>
 </html>
