--- a/index.html
+++ b/index.html
@@ -4,78 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Home</title>
+    <!-- Reset CSS -->
     <link rel="stylesheet" href="CSS/reset.css">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
+    <link href="CSS/map.css" rel="stylesheet">
+    <!-- Scripts -->
+    <script src="js/script.js" defer></script>
+    <script src="js/map.js" defer></script>
   </head>
 
-  <body class="m-0 border-0 bd-example">
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
+  <body>
+    <nav class="navbar navbar-expand-md custom-nav">
       <div class="container-fluid">
         <a href="./index.html"><img src="assets/images/logo.png" alt="POWER web" width="100" height="100"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">home</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link active" href="./index.html">home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">projecten</a></li>
             <li class="nav-item"><a class="nav-link" href="./contact.html">contact</a></li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="me-2" type="search" placeholder="zoeken" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">zoeken</button>
-          </form>
         </div>
       </div>
     </nav>
 
-    <header class="m-5 text-center blauwgrijs">
-      <h1 class="display-3">portfolio</h1>
+    <header class="header-box text-center index-header">
+      <h1 class="display-3">Systeem- en Netwerkbeheer</h1>
     </header>
+
     <div class="container">
       <div class="row g-4">
-        <main class="col-md-8 col-12">
-          <section id="intro" class="row align-items-center">
+        <main class="col-md-8 col-12 main-box">
+          <section id="intro" class="row align-items-center mb-5">
             <article class="col-md-6 col-12 text-center">
-              <img src="assets/images/professioneleFoto.jpg" alt="Portfolio Hero" class="img-fluid rounded" style="max-width:100%; height:auto;">
+              <img src="assets/images/professioneleFoto.jpg" alt="Portfolio Hero" class="img-fluid professional-photo">
             </article>
             <article class="col-md-6 col-12">
-              <h2 class="text-uppercase fs-5 fw-bold">Welkom</h2>
-              <p>Welkom op mijn portfolio. Hier vindt u een overzicht van mijn projecten, vaardigheden en professionele achtergrond in systeem- en netwerkbeheer.</p>
-              <a href="./portfolio.html" class="btn btn-primary mt-2">Bekijk mijn werk</a>
+              <h2 class="text-uppercase fs-5 fw-bold mb-3">Introductie</h2>
+              <p>
+                Ik ben een leergierige en gemotiveerde persoon, altijd bezig met het uitbreiden van mijn kennis.
+                Momenteel leer ik meerdere programmeertalen zoals HTML, CSS, JavaScript, JSON, PHP en SQL.
+                Ik focus op zelfstandig leren en toepassen van vaardigheden en wil deze verder ontwikkelen in een professionele omgeving.
+              </p>
             </article>
           </section>
-          <section id="introductie" class="row mt-4">
+          <section class="row mt-4">
             <article class="col-12">
-              <h2 class="text-uppercase fs-5 fw-bold">Introductie</h2>
-              <p>Mijn naam is Wasim, ik specialiseer mij in systeem- en netwerkbeheer. In dit portfolio vindt u voorbeelden van mijn werk, documentatie van projecten, en een overzicht van mijn vaardigheden en opleidingen.</p>
+              <h2 class="text-uppercase fs-5 fw-bold mb-3">Laatste project</h2>
+              <p>Bekijk mijn meest recente systeem- en netwerkbeheerproject waarin ik mijn programmeer- en netwerkvaardigheden heb toegepast.</p>
+              <a href="./project6.html" class="btn btn-primary mt-2">Bekijk laatste project</a>
             </article>
           </section>
         </main>
 
-        <aside class="col-md-4 col-12 p-3 border-start border-3 border-primary">
-          <h2 class="fs-6 fw-bold text-uppercase">Contact</h2>
-          <p><a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
-          <p><a href="tel:+32484843579">+32 484 84 35 79</a></p>
-          <ul class="list-inline socials mb-0">
-            <li class="list-inline-item">
-              <a href="https://www.github.com" target="_blank"><i class="bi bi-github"></i></a>
-            </li>
+        <aside class="col-md-4 col-12 p-3 aside-box">
+          <h2 class="fs-6 fw-bold text-uppercase mb-3">Contact</h2>
+          <p><strong>Email:</strong> <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
+          <p><strong>Telefoon:</strong> <a href="tel:+32484843579">+32 484 84 35 79</a></p>
+          <p><strong>Locatie:</strong> Antwerpen, België</p>
+          <ul class="list-inline socials mb-0 mt-3">
+            <li class="list-inline-item"><a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation"><i class="bi bi-github"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/"><i class="bi bi-linkedin"></i></a></li>
           </ul>
+          <section id="map" class="row">
+            <div id="gemeenteMap" class="col-12 mb-3"></div>
+          </section>
         </aside>
       </div>
     </div>
 
-    <footer class="footer m-0 bg-body-tertiary text-center">&copy; portfolio</footer>
-
+    <footer class="footer text-center custom-footer mt-4">
+      &copy; <span id="year"></span> Wasim Van Dessel | 
+      <a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation">GitHub</a> | 
+      <a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/">LinkedIn</a>
+    </footer>
   </body>
 </html>
