--- a/portfolio.html
+++ b/portfolio.html
@@ -6,130 +6,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="CSS/reset.css">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <!-- Custom CSS -->
     <link href="CSS/style.css" rel="stylesheet">
   </head>
-
-  <body class="m-0 border-0 bd-example">
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
+  <body>
+    <nav class="navbar navbar-expand-md custom-nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">
-          <img src="assets/images/logo.png" alt="POWER web" width="100" height="100">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navPortfolio"
-          aria-controls="navPortfolio" aria-expanded="false" aria-label="Toggle navigation">
+        <a href="./index.html"><img src="assets/images/logo.png" alt="POWER web" width="100" height="100"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPortfolio"
+          aria-controls="navbarPortfolio" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navPortfolio">
+        <div class="collapse navbar-collapse" id="navbarPortfolio">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="./index.html">home</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./portfolio.html">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./portfolio.html">projecten</a></li>
             <li class="nav-item"><a class="nav-link" href="./contact.html">contact</a></li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="zoeken" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">zoeken</button>
-          </form>
         </div>
       </div>
     </nav>
 
-    <header class="m-5 text-center blauwgrijs">
+    <header class="header-box text-center">
       <h1 class="display-3">PORTFOLIO</h1>
     </header>
+
     <div class="container">
-      <div class="row g-3">
-        <main class="col-md-9 col-sm-12">
-          <section id="projects" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-            <!-- Project 1 -->
+      <div class="row g-4">
+        <main class="col-md-8 col-12 main-box">
+          <section id="projects" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-4">
+            
             <article class="col">
               <div class="card h-100">
                 <img src="assets/images/project1.jpg" class="card-img-top" alt="Project 1">
                 <div class="card-body">
                   <h5 class="card-title">Project 1</h5>
-                  <p class="card-text">Korte omschrijving van project 1, wat je hebt gedaan en welke vaardigheden gebruikt zijn.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Kennismaking met het werkveld, ontdekken van interesses en opbouwen van een professionele mindset.</p>
+                  <a href="./project1.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
-            <!-- Project 2 -->
+
             <article class="col">
               <div class="card h-100">
                 <img src="assets/images/project2.jpg" class="card-img-top" alt="Project 2">
                 <div class="card-body">
                   <h5 class="card-title">Project 2</h5>
-                  <p class="card-text">Korte omschrijving van project 2, inclusief gebruikte technologieën.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Basisbeginselen van programmeren en logisch probleemoplossen met JS, Python, PHP, HTML, CSS, SQL, JSON en Linux commands.</p>
+                  <a href="./project2.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
-            <!-- Project 3 -->
+
             <article class="col">
               <div class="card h-100">
-                <img src="assets/images/project3.jpg" class="card-img-top" alt="Project 3">
+                <img src="assets/images/project3.png" class="card-img-top" alt="Project 3">
                 <div class="card-body">
                   <h5 class="card-title">Project 3</h5>
-                  <p class="card-text">Korte omschrijving van project 3, wat het doel was en resultaat.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Beheer van een Windows 2025 server, toepassen van systeem- en netwerkbeheer vaardigheden.</p>
+                  <a href="./project3.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
-            <!-- Project 4 -->
+
             <article class="col">
               <div class="card h-100">
                 <img src="assets/images/project4.jpg" class="card-img-top" alt="Project 4">
                 <div class="card-body">
                   <h5 class="card-title">Project 4</h5>
-                  <p class="card-text">Korte omschrijving van project 4 met focus op leerervaringen.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Praktische toepassingen van scripting en automatisering binnen een netwerk omgeving.</p>
+                  <a href="./project4.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
-            <!-- Project 5 -->
+
             <article class="col">
               <div class="card h-100">
                 <img src="assets/images/project5.jpg" class="card-img-top" alt="Project 5">
                 <div class="card-body">
                   <h5 class="card-title">Project 5</h5>
-                  <p class="card-text">Korte omschrijving van project 5 en gebruikte tools.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Ontwikkeling van interactieve webcomponenten met HTML, CSS, JS en PHP.</p>
+                  <a href="./project5.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
-            <!-- Project 6 -->
+
             <article class="col">
               <div class="card h-100">
                 <img src="assets/images/project6.jpg" class="card-img-top" alt="Project 6">
                 <div class="card-body">
                   <h5 class="card-title">Project 6</h5>
-                  <p class="card-text">Korte omschrijving van project 6 met resultaten en impact.</p>
-                  <a href="./naam.html" class="btn btn-primary">Bekijk project</a>
+                  <p class="card-text">Laatste systeem- en netwerkbeheerproject, demonstratie van alle opgedane vaardigheden en kennis.</p>
+                  <a href="./project6.html" class="btn btn-primary">Bekijk project</a>
                 </div>
               </div>
             </article>
+
           </section>
         </main>
 
-        <aside class="col-md-3 p-5 border-start border-light-emphasis">
-          <h2 class="text-uppercase fs-5 fw-bold">contact</h2>
-          <p class="mb-1"><strong>E:</strong> jouw.mail@voorbeeld.com</p>
-          <p class="mb-3"><strong>T:</strong> +123 456 789</p>
-          <ul class="list-inline">
-            <li class="list-inline-item"><a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
+        <aside class="col-md-4 col-12 p-3 aside-box">
+          <h2 class="fs-6 fw-bold text-uppercase mb-3">Contact</h2>
+          <p><strong>Email:</strong> <a href="mailto:wasim.vandessel@student.ap.be">wasim.vandessel@student.ap.be</a></p>
+          <p><strong>Telefoon:</strong> <a href="tel:+32484843579">+32 484 84 35 79</a></p>
+          <p><strong>Locatie:</strong> Antwerpen, België</p>
+          <ul class="list-inline socials mb-0 mt-3">
+            <li class="list-inline-item">
+              <a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation"><i class="bi bi-github"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/"><i class="bi bi-linkedin"></i></a>
+            </li>
           </ul>
         </aside>
       </div>
     </div>
 
-    <footer class="footer m-0 bg-body-tertiary text-center">© portfolio</footer>
-
+    <footer class="footer text-center custom-footer mt-4">
+      &copy; <span id="year"></span> Wasim Van Dessel | 
+      <a href="https://github.com/MVPCreation" target="https://github.com/MVPCreation">GitHub</a> | 
+      <a href="https://www.linkedin.com/in/wasim-van-dessel-251437399/" target="https://www.linkedin.com/in/wasim-van-dessel-251437399/">LinkedIn</a>
+    </footer>
   </body>
 </html>
